# vue-django-docker

./: .gitignore  README.md  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  db.sqlite3  pyproject.toml
backend/api/: serializers.py  views.py
backend/app/: models.py
backend/app/management/commands/: seed.py
backend/app/migrations/: 0001_initial.py
backend/backend/: asgi.py  settings.py  urls.py
backend/chat/: consumers.py
frontend/: .dockerignore  .env  .prettierrc.json  Dockerfile  eslint.config.js  package.json  tailwind.config.js  vite.config.js
frontend/src/: main.css  main.js  router.js
frontend/src/views/: ChatView.vue  GamesView.vue  PickerView.vue
nginx/: Dockerfile  default.conf
