[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Boilerplate for Vue and Django with Docker Compose"
authors = ["Kjell Boeije <kjellboeije@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.0"
django-rest-framework = "^0.1.0"
channels = "^4.1.0"
django-cors-headers = "^4.3.1"
daphne = "^4.1.2"
channels-redis = "^4.2.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
