[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Boilerplate for Vue and Django with Docker Compose"
authors = ["Kjell Boeije <kjellboeije@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "*"
django = "*"
django-rest-framework = "*"
channels = "*"
django-cors-headers = "*"
daphne = "*"
channels-redis = "*"
psycopg2-binary = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
