[project]
name = "backend"
version = "0.1.0"
description = "Boilerplate for Vue and Django with Docker Compose"
authors = [{ name = "Kjell Boeije", email = "kjellboeije@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "../README.md"
dependencies = [
    "django",
    "django-rest-framework",
    "channels",
    "django-cors-headers",
    "daphne",
    "channels-redis",
    "psycopg2-binary",
]

[dependency-groups]
dev = [
    "pre-commit",
    "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
